# druid_image_viewer

./: Cargo.toml  README.md
resources/i18n/en-US/: builtin.ftl
resources/i18n/zh-CN/: builtin.ftl
src/: custom_widget.rs  delegate.rs  lib.rs  main.rs
