[package]
name = "druid_image_viewer"
version = "0.1.0"
authors = ["bstaint"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { path = "E:/3rdParty/gui/druid/druid", features = ["image", "png", "jpeg", "bmp", "ico"] }